Add Java and Scala submodule

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'gradle-ext-module-type'
 
-include "subproject"
+include "pythonModule"
+include "scalaModule"
+include "javaModule"
