--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import org.jetbrains.gradle.ext.*
 plugins {
     id "java"
-    id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.2"
+    id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.5"
 }
 
 
@@ -20,3 +20,22 @@ idea {
     }
 }
 
+// Jar example
+fileTree(dir: "${modulename}/src/main/java/com/vickyd/", include: '**/*.java')
+    .each { File file ->
+      idea {
+        def fileNameWithoutExt = "${FilenameUtils.getBaseName(file.name)}"
+
+        project {
+          settings {
+            runConfigurations {
+              "Run ${fileNameWithoutExt}"(JarApplication) {
+                jarPath = "${project.projectDir}/build/project-impl/libs/myjar.jar"
+                programParameters = "com.myproject.${fileNameWithoutExt}"
+                workingDirectory = "${project.projectDir}"
+              }
+            }
+          }
+        }
+      }
+    }
